<resources>
    <string name="app_name">Selfwich</string>

    <string name="TakerOrderAndPublishbtn"><![CDATA[Order&Publish]]></string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addname">Please Add your Special Sandwich Name</string>
    <string name="user_name_is_not_valid">user name is not valid</string>
    <string name="password_is_not_valid">passwor is not valid</string>
    <string name="name_is_not_valid">name is not valid</string>
    <string name="this_field_cant_be_empty">this field can not be empty </string>
    <string name="addButtonId">ADD</string>
    <string name="save_changes">save changes</string>
    <string name="Name">Name:</string>
    <string name="userName">userName</string>
    <string name="HELLO">Hello</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="changeForName">changeForName</string>
    <string name="LogOut">LogOut</string>
    <string name="ok">ok</string>
    <string name="products">Products</string>
    <string name="Ingredietns">Ingredietns</string>
    <string name="buy">BUY</string>
    <string name="add_eats">ADD EATS</string>
    <string name="add_drinks">ADD DRINKS</string>
    <string name="owner">Owner:</string>
    <string name="price">Total Price:</string>
    <string name="details">Details</string>
    <string name="add_prodcut_to_database">ADD PRODCUT TO DATABASE</string>
    <string name="product_price">Product Price</string>
    <string name="product_name">Product Name</string>
    <string name="write_product_desc">write product desc</string>
    <string name="product_desc">Product Desc</string>
    <string name="Pricee">Price:</string>
    <string name="desc">Description:</string>
    <string name="image">Image:</string>
    <string name="write_desc">Write Desc</string>
    <string name="this_filed_cant_empty">This Field Can not be Empty</string>
    <string name="login">LOGIN</string>
    <string name="welcome_to_selfwich">WELCOME TO SELFWICH</string>
    <string name="create_account">Create Account</string>
    <string name="selfwich">Selfwich</string>
    <string name="orderr">To Order</string>
    <string name="priceIs">Price :</string>
    <string name="eatsForMenu">Eatable</string>
    <string name="drinksForMenu">Drinks</string>
    <string name="selfwichForMenu">Selfwich</string>
    <string name="sandwichForMenu">Sandwich</string>
    <string name="settingsForMenu">Settings</string>
    <string name="currentOrderForMenu">My Order</string>
    <string name="orderDetailsForMenu">Order History</string>
    <string name="DoyourownSelfwich">Do your own Selfwich</string>
    <string name="selfwiches">selfwiches</string>
    <string name="eats">Eats</string>
    <string name="selfwichess">Selfwiches</string>
    <string name="admin">ADMIN</string>
    <string name="register">Register</string>
    <string name="back_to_log_n">Back To Logın</string>
    <string name="addd">ADD</string>
    <string name="write_name">Write Name</string>
    <string name="write_price">Write Price</string>
    <string name="write_description">Write Description</string>
    <string name="add_image_url">Add Image Url</string>
    <string name="update">Update</string>
    <string name="loginTitle">Login</string>
    <string name="SettingsTitle">Settings</string>
    <string name="drinksTitle">Drinks</string>
    <string name="adminLoginTitle">Admin Login</string>
    <string name="ordersTitle">All Orders</string>
    <string name="orderDetailTitle">Order</string>
    <string name="currentOrderTitle">My Order</string>
    <string name="SelfwichTitle">Selfwiches</string>


</resources>
