<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/eatsFragment"
        android:icon="@drawable/silverwareblack32"
        android:title="@string/eats" />
    <item
        android:id="@+id/drinksFragment"
        android:icon="@drawable/teacupblack32"
        android:title="@string/drinksForMenu" />
    <item
        android:id="@+id/selfwichFragment"
        android:icon="@drawable/chefblack32"
        android:title="@string/selfwichess" />
    <item
        android:id="@+id/ingredientFragment"
        android:icon="@drawable/chefblack32"
        android:title="@string/DoyourownSelfwich" />
    <item
        android:id="@+id/currentOrderFragment"
        android:icon="@drawable/shoppingcartblack32"
        android:title="@string/currentOrderForMenu" />
    <item
        android:id="@+id/orderFragment"
        android:icon="@drawable/clipboardblack32"
        android:title="@string/orderDetailsForMenu" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/settingsblack32"
        android:title="@string/settingsForMenu" />

</menu>