<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <variable
            name="settingsViewModel"
            type="com.example.selfwich.viewModel.SettingsViewModel" />

        <variable
            name="settingsForm"
            type="com.example.selfwich.model.UserSettings" />
    </data>



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="10dp"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.settings.SettingsFragment">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:text="@string/HELLO"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/userName"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:hint="@string/userName"
                android:text="@{settingsViewModel.currentUserSettings.userDisplayName}"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/textView3" />

            <TextView
                android:id="@+id/nameTw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="24dp"
                android:text="@string/Name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/Email"
                app:layout_constraintEnd_toEndOf="@+id/nameTw"
                app:layout_constraintStart_toStartOf="@+id/nameTw"
                app:layout_constraintTop_toBottomOf="@+id/nameTw" />


            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="name"
                android:ems="10"
                android:hint="@string/changeForName"
                android:inputType="textPersonName"
                android:text="@{settingsViewModel.currentUserSettings.userDisplayName}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.54"
                app:layout_constraintStart_toEndOf="@+id/nameTw"
                app:layout_constraintTop_toBottomOf="@+id/userName" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="65dp"
                android:layout_height="30dp"
                android:text="@string/Password"
                app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonPassword"
                app:layout_constraintEnd_toEndOf="@+id/textView8"
                app:layout_constraintHorizontal_bias="0.291"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/editTextTextPersonEmail"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="24dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/Email"
                android:inputType="textPersonName"
                android:text="@{settingsViewModel.currentUserSettings.userEmail}"
                app:layout_constraintBottom_toBottomOf="@+id/textView8"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
                app:layout_constraintHorizontal_bias="0.53"
                app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/editTextTextPersonPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/Password"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonEmail"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/editTextTextPersonEmail"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonEmail"
                app:layout_constraintVertical_bias="0.035" />

            <Button
                android:id="@+id/loguOut"
                android:layout_width="104dp"
                android:layout_height="51dp"
                android:layout_marginTop="108dp"
                android:background="@color/white"
                android:onClick="@{()->settingsViewModel.signedOut()}"
                android:text="@string/LogOut"
                app:layout_constraintEnd_toStartOf="@+id/saveChanges"
                app:layout_constraintHorizontal_bias="0.383"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonPassword" />

            <Button
                android:id="@+id/saveChanges"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="36dp"
                android:onClick="@{()->settingsViewModel.updateUserInformation(settingsForm)}"
                android:text="@string/save_changes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/loguOut" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>