<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewmodel"
            type="com.example.selfwich.viewModel.CurrentOrderViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="114dp"
            android:layout_weight="1">


            <TextView
                android:id="@+id/orderHourText22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="90dp"
                android:layout_marginBottom="50dp"
                android:text="@{viewmodel.order.dateConverterToHour()}"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/orderPiriceTextView22"
                app:layout_constraintTop_toBottomOf="@+id/orderDatatextView22"
                tools:text="20:45" />

            <TextView
                android:id="@+id/orderDatatextView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="90dp"
                android:text="@{viewmodel.order.dateConverter()}"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/orderHourText22"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/orderPiriceTextView22"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="adsdfasd" />

            <TextView
                android:id="@+id/owenerSTextView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/Name"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/orderDatatextView22" />


            <TextView
                android:id="@+id/orderPSTextView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/price"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/owenerSTextView22" />

            <TextView
                android:id="@+id/orderPiriceTextView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{viewmodel.order.priceToString()}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toEndOf="@+id/orderPSTextView22"
                app:layout_constraintTop_toBottomOf="@+id/owenerSTextView22"
                tools:text="55" />

            <TextView
                android:id="@+id/orderOwnerTextView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewmodel.order.ownerName}"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/owenerSTextView22"
                app:layout_constraintTop_toTopOf="@+id/owenerSTextView22"
                tools:text="Yushaa" />

            <TextView
                android:id="@+id/toOrdertextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="28dp"
                android:text="@string/orderr"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/orderDatatextView22" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/productRcy22"
            android:layout_width="match_parent"
            android:layout_height="208dp"
            orderProductList="@{viewmodel.order.products}"
            android:layout_weight="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            tools:listitem="@layout/order_details_produc_list_item" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/selfwichRcy22"
            android:layout_width="417dp"
            android:layout_height="208dp"
            android:layout_weight="3"
            orderSelfwichList="@{viewmodel.order.selfwichs}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:listitem="@layout/order_details_selfwich_list_item">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>
</layout>